updating to https

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hellou</h1>
+  <h1>Hellou?</h1>
   <p></p>
   <script>
     const a = new XMLHttpRequest()
-    const url = 'http://www.google.com'
+    const url = 'https://www.google.com'
     // const url = 'http://www.whateverorigin.org/get?url=http://www.postosjarjour.com/'
     a.open("GET", url)
     a.send()
